# arkive-http

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  alembic.ini  oaitest.py  package.json  pyproject.toml
deploy/: deployment.yaml  service.yaml
migrations/: env.py
migrations/versions/: 00afde5d76e8_re_setup.py  1d6f61e7488f_add_note_and_folder.py  5baa9934b074_add_concept_of_noteblock.py  618f535e3823_generate_all_relations_from_scratch.py  94dc8002f01a_add_tags.py  e30b1013c045_add_title_to_post.py
migrations/versions_old/: 618f535e3823_generate_all_relations_from_scratch.py  ac4fcc41e102_delete_user_post_association_and_only_.py  b6d07cded726_create_postgres_triagram_search_.py  bcf3f014be74_update_tag_post_relation.py  e30b1013c045_add_title_to_post.py
scripts/: create_test_folders.py  install.sh  pupulate_dummy_posts.py  test.py
src/arkive_db/enums/: __init__.py  sign_in_provider.py
src/arkive_db/models/: __init__.py
src/arkive_web_service/: __main__.py  constants.py
src/arkive_web_service/database/: __init__.py  _database.py
src/arkive_web_service/dependencies/: __init__.py  auth.py
src/arkive_web_service/endpoints/: auth.py  internal.py  parser.py  posts.py  profile.py
src/arkive_web_service/enums/: __init__.py
src/arkive_web_service/llm/: explainer.py  setup.py  summarizer.py
src/arkive_web_service/mappers/: __init__.py  _post_to_json.py  _signin_provider_enum_to_database.py
src/arkive_web_service/middlewares/: __init__.py  _logging.py
src/arkive_web_service/post_filter_engine/: __init__.py  types.py
(+23 files in other folders)
